--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Ping Ngoh Greenhouse</title>
+  <title>😄 Ping Fan & Hong Ngoh's Greenhouse</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -15,8 +15,8 @@
 	
 	<style>
     body{
-        background-image: url("image2.png");
-		background-size: 1400px 1000px;
+        /*background-image: url("image2.png");
+		background-size: 1400px 1000px;*/
 	}
 	
 	table, th, td {
@@ -27,54 +27,51 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-   <a class="navbar-brand" href="index.html">Ping Ngoh Greenhouse Mointoring Dashboard</a>
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Dashboard</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+   <a class="navbar-brand" href="index.html">😄 Ping Fan & Hong Ngoh's Greenhouse Monitoring Dashboard</a>
+
   </nav>
- 
-		
-	 <br>
+  
 		 <div class="container">
-			
-			<div class="col-md-6">
-				<div id="line-example" style="min-height:250px;"></div>
+			<div class="row">
+				<div class="col-md-6">
+					<div id="chart-temperature"></div>
+				</div>
+				<div class="col-md-6">
+					<table class="table table-striped table-bordered table-hover">
+						<h2>Temperature Sensor</h2>
+						<thead>
+							<tr>
+								<th>Temperature</th>
+								<th>Time</th>
+							</tr>
+						</thead>
+						<tbody id="table-temperature">
+						</tbody>
+					</table>
+				</div>
 			</div>
-			<div class="col-md-6">
-				<table class="table table-striped table-bordered table-hover">
-					<h2>Temperature Sensor</h2>
-					<thead>
-						<tr>
-							<th>Temperature</th>
-							<th>Time</th>
-						</tr>
-					</thead>
-					<tbody class="table-body">
-					</tbody>
-				</table>
+
+			<div class="row">
+					<div class="col-md-6">
+						<div id="chart-light"></div>
+					</div>
+					<div class="col-md-6">
+						<table class="table table-striped table-bordered table-hover">
+							<h2>Light Sensor</h2>
+							<thead>
+								<tr>
+									<th>Light Intensity</th>
+									<th>Time</th>
+								</tr>
+							</thead>
+							<tbody id="table-light">
+							</tbody>
+						</table>
+					</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="col-md-6">
-				<div id="line-example" style="min-height:250px;"></div>
-			</div>
-			<div class="col-md-6">
-				<table class="table table-striped table-bordered table-hover">
-					<h2>Light Sensor</h2>
-					<thead>
-						<tr>
-							<th>Light</th>
-							<th>Time</th>
-						</tr>
-					</thead>
-					<tbody class="table-body">
-					</tbody>
-				</table>
-			</div>
-		</div>
+		
 <!-- Socket.io library -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 	<!-- jQuery library -->
