--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,43 @@
 <html lang="en">
 
 <head>
-  <title>😄 Ping Fan & Hong Ngoh's Greenhouse</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Morris CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-	
+	<title>😄 Ping Fan & Hong Ngoh's Greenhouse</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
 	<style>
-    body{
-        /*background-image: url("image2.png");
-		background-size: 1400px 1000px;*/
-	}
-	
-	table, th, td {
-	  border: 1px solid black;
-	}
+		body {
+			margin-top: 88px;
+		}
+
+		table,
+		th,
+		td {
+			border: 1px solid black;
+		}
+
+		.table-scroll {
+			overflow-x: auto;
+			height: 400px;
+		}
 	</style>
 </head>
 
 <body>
+	<nav class="navbar navbar-dark fixed-top bg-dark">
+		<a class="navbar-brand" href="index.html">😄 Ping Fan & Hong Ngoh's Greenhouse Monitoring Dashboard</a>
+	</nav>
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-   <a class="navbar-brand" href="index.html">😄 Ping Fan & Hong Ngoh's Greenhouse Monitoring Dashboard</a>
-
-  </nav>
-  
-		 <div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<div id="chart-temperature"></div>
-				</div>
-				<div class="col-md-6">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6">
+				<div id="chart-temperature"></div>
+			</div>
+			<div class="col-md-6">
+				<h2>Temperature Sensor</h2>
+				<div class="table-scroll">
 					<table class="table table-striped table-bordered table-hover">
-						<h2>Temperature Sensor</h2>
 						<thead>
 							<tr>
 								<th>Temperature</th>
@@ -51,40 +50,41 @@
 					</table>
 				</div>
 			</div>
+		</div>
 
-			<div class="row">
-					<div class="col-md-6">
-						<div id="chart-light"></div>
-					</div>
-					<div class="col-md-6">
-						<table class="table table-striped table-bordered table-hover">
-							<h2>Light Sensor</h2>
-							<thead>
-								<tr>
-									<th>Light Intensity</th>
-									<th>Time</th>
-								</tr>
-							</thead>
-							<tbody id="table-light">
-							</tbody>
-						</table>
-					</div>
+		<div class="mt-2"></div>
+
+		<div class="row">
+			<div class="col-md-6">
+				<div id="chart-light"></div>
+			</div>
+			<div class="col-md-6">
+				<h2>Light Sensor</h2>
+				<div class="table-scroll">
+					<table class="table table-striped table-bordered table-hover">
+						<thead>
+							<tr>
+								<th>Light Intensity</th>
+								<th>Time</th>
+							</tr>
+						</thead>
+						<tbody id="table-light">
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
-		
-<!-- Socket.io library -->
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<!-- Morris chart library from CDN -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+	<script src="https://code.highcharts.com/stock/highstock.js"></script>
+
 	<!-- And our custom script ;) -->
 	<script src="js/scripts.js"></script>
-    
-
 
 </body>
 
