Added soil moisture monitoring

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,30 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="mt-2"></div>
+
+		<div class="row">
+				<div class="col-md-6">
+					<div id="chart-moisture"></div>
+				</div>
+				<div class="col-md-6">
+					<h2>Soil Moisture Sensor</h2>
+					<div class="table-scroll">
+						<table class="table table-striped table-bordered table-hover">
+							<thead>
+								<tr>
+									<th>Soil Moisture Level</th>
+									<th>Status</th>
+									<th>Time</th>
+								</tr>
+							</thead>
+							<tbody id="table-moisture">
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
